use download.docker.com

--- a/vars/global_docker.yml
+++ b/vars/global_docker.yml
@@ -7,10 +7,10 @@ docker_rh_repo_gpgkey: >-
   {%- else -%}https://download.docker.com/linux/centos/gpg{%- endif -%}
 dockerproject_rh_repo_base_url: >-
   {%- if localrepo_enabled -%}http://{{ localrepo_yum }}:{{ localrepo_port }}/dockerproject/repo/main/centos/7
-  {%- else -%}https://yum.dockerproject.org/repo/main/centos/7{%- endif -%}
+  {%- else -%}https://download.docker.com/linux/centos/7{%- endif -%}
 dockerproject_rh_repo_gpgkey: >-
   {%- if localrepo_enabled -%}http://{{ localrepo_yum }}:{{ localrepo_port }}/dockerproject/gpg
-  {%- else -%}https://yum.dockerproject.org/gpg{%- endif -%}
+  {%- else -%}https://download.docker.com/linux/centos/gpg{%- endif -%}
 
 docker_container_storage_setup: false
 docker_storage_options: -s overlay2
