--- a/roles/docker/defaults/main.yml
+++ b/roles/docker/defaults/main.yml
@@ -23,7 +23,7 @@ docker_debian_repo_base_url: "https://download.docker.com/linux/debian"
 docker_debian_repo_gpgkey: 'https://download.docker.com/linux/debian/gpg'
 
 # dockerproject repo
-dockerproject_rh_repo_base_url: 'https://download.docker.com/linux/centos/7'
+dockerproject_rh_repo_base_url: 'https://download.docker.com/linux/centos/7/$basearch/stable'
 dockerproject_rh_repo_gpgkey: 'https://download.docker.com/linux/centos/gpg'
 dockerproject_apt_repo_base_url: 'https://apt.dockerproject.org/repo'
 dockerproject_apt_repo_gpgkey: 'https://apt.dockerproject.org/gpg'
